--- a/ultralytics/cfg/models/v8/yolov8-custom.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-custom.yaml
@@ -4,6 +4,7 @@
 # Parameters
 nc: 2 # number of classes
 ch: 1 # number of channels
+augment: False
 scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
   # [depth, width, max_channels]
   n: [0.33, 0.25, 1024]  # YOLOv8n summary: 225 layers,  3157200 parameters,  3157184 gradients,   8.9 GFLOPs
